# prj

./: accessToken.md
2d-linFEM/: .load_vector.hpp.swp  .load_vector_assembly.hpp.swp  .stiffness_matrix.hpp.swp  CMakeLists.txt  Lshape.hpp  convergence.hpp  fem2d.cpp  fem_solve.hpp  grad_shape.hpp  load_vector.hpp  load_vector_assembly.hpp  plotConvergenceSaveAsPNG.py  plot_convergence.m  plot_convergence.py  shape.hpp  stiffness_matrix.hpp  stiffness_matrix_assembly.hpp
2d-linFEM/buildAmd64/: CMakeCache.txt  Lshape_values.txt  Makefile  cmake_install.cmake  fem2d  plotOnMeshSaveAsPNG.py  square_1_triangles.txt  square_1_values.txt  square_2_triangles.txt  square_2_values.txt  square_2_vertices.txt  square_3_triangles.txt  square_3_values.txt  square_4_triangles.txt  square_4_values.txt  square_5_values.txt  square_6_triangles.txt  square_6_values.txt  square_errors.txt  square_errorsH1.txt
2d-linFEM/buildAmd64/Eigen-prefix/src/Eigen-build/: CMakeCache.txt  CTestTestfile.cmake  DartConfiguration.tcl  Eigen3Targets.cmake  Makefile  cdashtesting.cmake  cmake_install.cmake  install_manifest.txt
2d-linFEM/buildAmd64/Eigen-prefix/src/Eigen-stamp/: download-Eigen.cmake  extract-Eigen.cmake
2d-linFEM/buildAmd64/Eigen-prefix/tmp/: Eigen-cfgcmd.txt
2d-linFEM/buildAmd64/Eigen_install/share/pkgconfig/: eigen3.pc
2d-linFEM/buildAmd64/IGL-prefix/src/IGL-stamp/: IGL-urlinfo.txt  download-IGL.cmake  extract-IGL.cmake
2d-linFEM/buildAmd64/unittest/: Makefile  cmake_install.cmake  unittest
2d-linFEM/buildAmd64/unittest/GTestDownload-prefix/tmp/: GTestDownload-cfgcmd.txt
2d-linFEM/buildAmd64/unittest/gtest_binary/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
2d-linFEM/buildAmd64/unittest/gtest_binary/googlemock/: CTestTestfile.cmake  Makefile  cmake_install.cmake
2d-linFEM/buildArm64/: CMakeCache.txt  Lshape_values.txt  Makefile  cmake_install.cmake  square_1_values.txt  square_1_vertices.txt  square_2_values.txt  square_3_values.txt  square_3_vertices.txt  square_4_values.txt  square_4_vertices.txt  square_5_triangles.txt  square_5_values.txt  square_5_vertices.txt  square_6_values.txt  square_6_vertices.txt  square_errors.txt  square_errorsH1.txt  square_resolutions.txt
2d-linFEM/buildArm64/Eigen-prefix/src/Eigen-build/: CMakeCache.txt  CTestTestfile.cmake  DartConfiguration.tcl  Eigen3Targets.cmake  Makefile  buildtests.sh  cdashtesting.cmake  cmake_install.cmake  eigen3.pc  install_manifest.txt
2d-linFEM/buildArm64/Eigen-prefix/src/Eigen-stamp/: Eigen-urlinfo.txt  download-Eigen.cmake  (+1 more)
2d-linFEM/buildArm64/Eigen-prefix/tmp/: Eigen-cfgcmd.txt  Eigen-mkdirs.cmake
2d-linFEM/buildArm64/IGL-prefix/tmp/: IGL-mkdirs.cmake
2d-linFEM/buildArm64/unittest/: Makefile  cmake_install.cmake
2d-linFEM/buildArm64/unittest/gtest_binary/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
2d-linFEM/unittest/: CMakeLists.txt  TestGradientShapeFunction.cpp  TestL2Norm.cpp  TestShapeFunction.cpp
(+451 files in other folders)
